Add an optional donate URLs to assets
